			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04q: *********************************

BUG: (6/7/06, SMR) Inserting a "T" in an arc triggers mimic deletion of the
     arc (Bug #1101).
FIX: In MimicStitch.mimicStitch(), mimic arc deletion only if no creations
     were done.

BUG: (6/6/06, SMR) Reloading waveform windows crashes (Bug #775).
FIX: Prevent null pointer problem in HSpice signal data.

BUG: (6/6/06, SMR) Waveform window makes uneven height panels, and may clip
     Y axis values (Bug #1095).
FIX: Panel height no longer taken from previous panels; Y axis values forced
     to be visible even if they cross to the right of the origin.

BUG: (6/6/06, SMR) Auto-stitching makes incorrect wires (Bug #1096).
FIX: New quad-tree code fixed to ensure valid connections.

BUG: (6/6/06, SMR) "Back" button crashes if cell has been deleted (Bug #1097).
FIX: In WindowFrame.setCellByHistory(), test for dead cells.

IMP/MAN: (6/6/06, SMR) Created new Preferences panel "Display / Display Control"
     to select and control the 3 display algorithms.  Removed items from the
     "Display" section of the "General" preferences panel.
     "Always Prompt for Index when descending into Array nodes" is in "Nodes".
     The "layers" sidebar now has a slider for controlling opacity.  Also, it
     includes the "Generic" technology in debug mode.

BUG: (6/5/06, GVG) Edit->Change fails if instances are not the same (Bug #1087)
FIX: Change code shouldn't return false if it is not done with nodes in the list.

BUG: (6/5/06, SMR) Some commands crash when a text window is displayed (Bug #532).
FIX: Fixed the Array command and the Rotate command.

BUG: (6/5/06, SMR) PNG output of waveform window fails
FIX: In WaveformWindow.getPrintImage(), do not scale if there is no former image.

IMP/MAN: (6/5/06, SMR) Reversed the arrow in the spiceparts node "pulseCurrent"