@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04q: *********************************
 
+BUG: (6/7/06, SMR) "Up hierarchy" always shows a full-screen view (Bug #1099)
+FIX: In EditWindow.setCell(), only fill the screen if no context.
+
 BUG: (6/7/06, SMR) Inserting a "T" in an arc triggers mimic deletion of the
      arc (Bug #1101).
 FIX: In MimicStitch.mimicStitch(), mimic arc deletion only if no creations
